[gd_scene load_steps=11 format=3 uid="uid://bx78ucsp7du5h"]

[ext_resource type="Script" uid="uid://db7bnmpuxymut" path="res://scripts/UI/top_panel.gd" id="1_kyx1g"]
[ext_resource type="Texture2D" uid="uid://cksamha1xgoyl" path="res://assets/images/TopRightPanel.png" id="1_scoti"]
[ext_resource type="Script" uid="uid://bjhatbfhkycad" path="res://scripts/UI/bottom_panel.gd" id="2_46p8p"]
[ext_resource type="Texture2D" uid="uid://ba0tecqsn242d" path="res://assets/images/BottomPanel.png" id="2_i1gbh"]
[ext_resource type="Texture2D" uid="uid://dxdgalw73g4br" path="res://assets/images/FlipSwitch2Off.png" id="3_46p8p"]
[ext_resource type="Texture2D" uid="uid://jafbochpe4o2" path="res://assets/images/FlipSwitchOff.png" id="4_okuri"]
[ext_resource type="Texture2D" uid="uid://bs32tk2ioadsi" path="res://assets/images/CameraFeed.png" id="5_kyx1g"]
[ext_resource type="FontFile" uid="uid://wppn0e6hu844" path="res://assets/Silver.ttf" id="6_okuri"]
[ext_resource type="Texture2D" uid="uid://inc21dnpbq1x" path="res://assets/images/PowerButton.png" id="8_r0apq"]
[ext_resource type="Script" uid="uid://ccouyexb0bnpi" path="res://scripts/UI/camera_feed.gd" id="8_r8eje"]

[node name="mainUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TopPanel" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(0, 175)
layout_mode = 1
offset_right = 169.0
offset_bottom = 175.0
script = ExtResource("1_kyx1g")

[node name="TopPanelRect" type="TextureRect" parent="TopPanel"]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("1_scoti")

[node name="timeLabel" type="Label" parent="TopPanel/TopPanelRect"]
layout_mode = 0
offset_left = 13.0
offset_right = 167.0
offset_bottom = 115.0
theme_override_fonts/font = ExtResource("6_okuri")
theme_override_font_sizes/font_size = 100
text = "09:35"
vertical_alignment = 1

[node name="musicStation" type="Label" parent="TopPanel/TopPanelRect"]
layout_mode = 0
offset_left = 16.0
offset_top = 81.0
offset_right = 157.0
offset_bottom = 130.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "MUSIC STATION"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="musicOn" type="Label" parent="TopPanel/TopPanelRect"]
offset_left = 7.0
offset_top = 115.0
offset_right = 81.0
offset_bottom = 170.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
text = "ON"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="musicOff" type="Label" parent="TopPanel/TopPanelRect"]
offset_left = 84.0
offset_top = 115.0
offset_right = 163.0
offset_bottom = 170.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
text = "OFF"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="musicButton" type="Button" parent="TopPanel/TopPanelRect"]
layout_mode = 0
anchor_top = 0.508571
anchor_right = 1.00592
anchor_bottom = 1.0
flat = true
metadata/_edit_use_anchors_ = true

[node name="BottomPanel" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(0, 325)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.637778
anchor_right = 1.0
anchor_bottom = 0.887778
offset_top = 0.999939
offset_bottom = 101.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("2_46p8p")
metadata/_edit_use_anchors_ = true

[node name="BottomPanelRect" type="TextureRect" parent="BottomPanel"]
layout_mode = 2
texture = ExtResource("2_i1gbh")

[node name="replyButton" type="TextureButton" parent="BottomPanel/BottomPanelRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.6025
anchor_top = 0.643077
anchor_right = 0.6275
anchor_bottom = 0.766154
offset_top = 5.99997
offset_right = 34.0
offset_bottom = 19.0
texture_normal = ExtResource("3_46p8p")
metadata/_edit_use_anchors_ = true

[node name="listenButton" type="TextureButton" parent="BottomPanel/BottomPanelRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.67125
anchor_top = 0.655384
anchor_right = 0.69625
anchor_bottom = 0.778461
offset_top = 2.0002
offset_right = 34.0
offset_bottom = 15.0002
texture_normal = ExtResource("3_46p8p")
metadata/_edit_use_anchors_ = true

[node name="micButton" type="TextureButton" parent="BottomPanel/BottomPanelRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.24262
anchor_top = -0.0161974
anchor_right = 1.26762
anchor_bottom = 0.10688
offset_left = -823.184
offset_top = 223.264
offset_right = -789.184
offset_bottom = 236.264
texture_normal = ExtResource("4_okuri")
metadata/_edit_use_anchors_ = true

[node name="signalIntegrity" type="ProgressBar" parent="BottomPanel/BottomPanelRect"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.694375
anchor_top = 0.101538
anchor_right = 0.819375
anchor_bottom = 0.16
offset_right = -50.0
value = 50.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="errorRate" type="ProgressBar" parent="BottomPanel/BottomPanelRect"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.87875
anchor_top = 0.233846
anchor_right = 0.9725
anchor_bottom = 0.316923
offset_right = -50.0
offset_bottom = -12.0
value = 50.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="latency" type="ProgressBar" parent="BottomPanel/BottomPanelRect"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.879375
anchor_top = 0.347692
anchor_right = 0.973125
anchor_bottom = 0.430769
offset_right = -50.0
offset_bottom = -12.0
value = 50.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="voiceModulation" type="Label" parent="BottomPanel/BottomPanelRect"]
layout_mode = 0
offset_left = 1120.0
offset_top = 63.9999
offset_right = 1265.0
offset_bottom = 104.0
theme_override_fonts/font = ExtResource("6_okuri")
theme_override_font_sizes/font_size = 35
text = "INACTIVE"

[node name="transponderSignature" type="Label" parent="BottomPanel/BottomPanelRect"]
layout_mode = 0
offset_left = 1120.0
offset_top = 110.0
offset_right = 1258.0
offset_bottom = 150.0
theme_override_fonts/font = ExtResource("6_okuri")
theme_override_font_sizes/font_size = 35
text = "INACTIVE"

[node name="signalNumber1" type="Label" parent="BottomPanel/BottomPanelRect"]
layout_mode = 0
offset_left = 1263.0
offset_top = 204.0
offset_right = 1303.0
offset_bottom = 227.0
text = "1"
horizontal_alignment = 1

[node name="signalNumber1_Button" type="Button" parent="BottomPanel/BottomPanelRect/signalNumber1"]
layout_mode = 0
anchor_left = -0.025
anchor_top = 2.30435
anchor_right = 0.95
anchor_bottom = 3.08696
flat = true
metadata/_edit_use_anchors_ = true

[node name="signalNumber2" type="Label" parent="BottomPanel/BottomPanelRect"]
layout_mode = 0
offset_left = 1324.0
offset_top = 204.0
offset_right = 1364.0
offset_bottom = 227.0
text = "0"
horizontal_alignment = 1

[node name="signalNumber2_Button" type="Button" parent="BottomPanel/BottomPanelRect/signalNumber2"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.025
anchor_top = 2.30435
anchor_right = 0.95
anchor_bottom = 3.08696
flat = true
metadata/_edit_use_anchors_ = true

[node name="signalNumber3" type="Label" parent="BottomPanel/BottomPanelRect"]
layout_mode = 0
offset_left = 1386.0
offset_top = 204.0
offset_right = 1426.0
offset_bottom = 227.0
text = "0"
horizontal_alignment = 1

[node name="signalNumber3_Button" type="Button" parent="BottomPanel/BottomPanelRect/signalNumber3"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.025
anchor_top = 2.30435
anchor_right = 0.95
anchor_bottom = 3.08696
flat = true
metadata/_edit_use_anchors_ = true

[node name="signalNumber4" type="Label" parent="BottomPanel/BottomPanelRect"]
layout_mode = 0
offset_left = 1446.0
offset_top = 204.0
offset_right = 1486.0
offset_bottom = 227.0
text = "8"
horizontal_alignment = 1

[node name="signalNumber4_Button" type="Button" parent="BottomPanel/BottomPanelRect/signalNumber4"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.025
anchor_top = 2.30435
anchor_right = 0.95
anchor_bottom = 3.08696
flat = true
metadata/_edit_use_anchors_ = true

[node name="powerButton" type="TextureButton" parent="BottomPanel/BottomPanelRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.55375
anchor_top = 0.430769
anchor_right = 0.57875
anchor_bottom = 0.553846
offset_right = 34.0
offset_bottom = 13.0
texture_normal = ExtResource("8_r0apq")
metadata/_edit_use_anchors_ = true

[node name="BPanel_LeftRect" type="NinePatchRect" parent="BottomPanel"]
layout_mode = 2

[node name="FrequencyListContainer" type="MarginContainer" parent="BottomPanel/BPanel_LeftRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.243125
anchor_top = 0.0584615
anchor_right = 0.360625
anchor_bottom = 0.953846
offset_right = 6.10352e-05
metadata/_edit_use_anchors_ = true

[node name="NinePatchRect" type="NinePatchRect" parent="BottomPanel/BPanel_LeftRect/FrequencyListContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="BottomPanel/BPanel_LeftRect/FrequencyListContainer/NinePatchRect"]
layout_mode = 2
anchor_left = 0.00531915
anchor_top = 0.0103093
anchor_right = 1.00532
anchor_bottom = 0.137457
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("6_okuri")
theme_override_font_sizes/font_size = 32
text = "ACTIVE FREQUENCIES"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="BottomPanel/BPanel_LeftRect/FrequencyListContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.137457
anchor_right = 1.01064
anchor_bottom = 0.993127
offset_right = -1.52588e-05
theme_override_constants/separation = 8
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="BottomPanel/BPanel_LeftRect/FrequencyListContainer/NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6
alignment = 1

[node name="Label" type="Label" parent="BottomPanel/BPanel_LeftRect/FrequencyListContainer/NinePatchRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_okuri")
theme_override_font_sizes/font_size = 30
text = "1001"

[node name="Label2" type="Label" parent="BottomPanel/BPanel_LeftRect/FrequencyListContainer/NinePatchRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_okuri")
theme_override_font_sizes/font_size = 30
text = "1001"

[node name="Label3" type="Label" parent="BottomPanel/BPanel_LeftRect/FrequencyListContainer/NinePatchRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_okuri")
theme_override_font_sizes/font_size = 30
text = "1001"

[node name="Label4" type="Label" parent="BottomPanel/BPanel_LeftRect/FrequencyListContainer/NinePatchRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_okuri")
theme_override_font_sizes/font_size = 30
text = "1001"

[node name="Label5" type="Label" parent="BottomPanel/BPanel_LeftRect/FrequencyListContainer/NinePatchRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_okuri")
theme_override_font_sizes/font_size = 30
text = "1001"

[node name="HBoxContainer2" type="HBoxContainer" parent="BottomPanel/BPanel_LeftRect/FrequencyListContainer/NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6
alignment = 1

[node name="Label" type="Label" parent="BottomPanel/BPanel_LeftRect/FrequencyListContainer/NinePatchRect/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_okuri")
theme_override_font_sizes/font_size = 30
text = "1001"

[node name="Label2" type="Label" parent="BottomPanel/BPanel_LeftRect/FrequencyListContainer/NinePatchRect/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_okuri")
theme_override_font_sizes/font_size = 30
text = "1001"

[node name="Label3" type="Label" parent="BottomPanel/BPanel_LeftRect/FrequencyListContainer/NinePatchRect/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_okuri")
theme_override_font_sizes/font_size = 30
text = "1001"

[node name="Label4" type="Label" parent="BottomPanel/BPanel_LeftRect/FrequencyListContainer/NinePatchRect/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_okuri")
theme_override_font_sizes/font_size = 30
text = "1001"

[node name="Label5" type="Label" parent="BottomPanel/BPanel_LeftRect/FrequencyListContainer/NinePatchRect/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_okuri")
theme_override_font_sizes/font_size = 30
text = "1001"

[node name="HBoxContainer3" type="HBoxContainer" parent="BottomPanel/BPanel_LeftRect/FrequencyListContainer/NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6
alignment = 1

[node name="Label" type="Label" parent="BottomPanel/BPanel_LeftRect/FrequencyListContainer/NinePatchRect/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_okuri")
theme_override_font_sizes/font_size = 30
text = "1001"

[node name="Label2" type="Label" parent="BottomPanel/BPanel_LeftRect/FrequencyListContainer/NinePatchRect/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_okuri")
theme_override_font_sizes/font_size = 30
text = "1001"

[node name="Label3" type="Label" parent="BottomPanel/BPanel_LeftRect/FrequencyListContainer/NinePatchRect/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_okuri")
theme_override_font_sizes/font_size = 30
text = "1001"

[node name="Label4" type="Label" parent="BottomPanel/BPanel_LeftRect/FrequencyListContainer/NinePatchRect/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_okuri")
theme_override_font_sizes/font_size = 30
text = "1001"

[node name="Label5" type="Label" parent="BottomPanel/BPanel_LeftRect/FrequencyListContainer/NinePatchRect/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_okuri")
theme_override_font_sizes/font_size = 30
text = "1001"

[node name="HBoxContainer4" type="HBoxContainer" parent="BottomPanel/BPanel_LeftRect/FrequencyListContainer/NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6
alignment = 1

[node name="Label" type="Label" parent="BottomPanel/BPanel_LeftRect/FrequencyListContainer/NinePatchRect/VBoxContainer/HBoxContainer4"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_okuri")
theme_override_font_sizes/font_size = 30
text = "1001"

[node name="Label2" type="Label" parent="BottomPanel/BPanel_LeftRect/FrequencyListContainer/NinePatchRect/VBoxContainer/HBoxContainer4"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_okuri")
theme_override_font_sizes/font_size = 30
text = "1001"

[node name="Label3" type="Label" parent="BottomPanel/BPanel_LeftRect/FrequencyListContainer/NinePatchRect/VBoxContainer/HBoxContainer4"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_okuri")
theme_override_font_sizes/font_size = 30
text = "1001"

[node name="Label4" type="Label" parent="BottomPanel/BPanel_LeftRect/FrequencyListContainer/NinePatchRect/VBoxContainer/HBoxContainer4"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_okuri")
theme_override_font_sizes/font_size = 30
text = "1001"

[node name="Label5" type="Label" parent="BottomPanel/BPanel_LeftRect/FrequencyListContainer/NinePatchRect/VBoxContainer/HBoxContainer4"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_okuri")
theme_override_font_sizes/font_size = 30
text = "1001"

[node name="HBoxContainer5" type="HBoxContainer" parent="BottomPanel/BPanel_LeftRect/FrequencyListContainer/NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6
alignment = 1

[node name="Label" type="Label" parent="BottomPanel/BPanel_LeftRect/FrequencyListContainer/NinePatchRect/VBoxContainer/HBoxContainer5"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_okuri")
theme_override_font_sizes/font_size = 30
text = "1001"

[node name="Label2" type="Label" parent="BottomPanel/BPanel_LeftRect/FrequencyListContainer/NinePatchRect/VBoxContainer/HBoxContainer5"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_okuri")
theme_override_font_sizes/font_size = 30
text = "1001"

[node name="Label3" type="Label" parent="BottomPanel/BPanel_LeftRect/FrequencyListContainer/NinePatchRect/VBoxContainer/HBoxContainer5"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_okuri")
theme_override_font_sizes/font_size = 30
text = "1001"

[node name="Label4" type="Label" parent="BottomPanel/BPanel_LeftRect/FrequencyListContainer/NinePatchRect/VBoxContainer/HBoxContainer5"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_okuri")
theme_override_font_sizes/font_size = 30
text = "1001"

[node name="Label5" type="Label" parent="BottomPanel/BPanel_LeftRect/FrequencyListContainer/NinePatchRect/VBoxContainer/HBoxContainer5"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_okuri")
theme_override_font_sizes/font_size = 30
text = "1001"

[node name="HBoxContainer6" type="HBoxContainer" parent="BottomPanel/BPanel_LeftRect/FrequencyListContainer/NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6
alignment = 1

[node name="Label" type="Label" parent="BottomPanel/BPanel_LeftRect/FrequencyListContainer/NinePatchRect/VBoxContainer/HBoxContainer6"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_okuri")
theme_override_font_sizes/font_size = 30
text = "1001"

[node name="Label2" type="Label" parent="BottomPanel/BPanel_LeftRect/FrequencyListContainer/NinePatchRect/VBoxContainer/HBoxContainer6"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_okuri")
theme_override_font_sizes/font_size = 30
text = "1001"

[node name="Label3" type="Label" parent="BottomPanel/BPanel_LeftRect/FrequencyListContainer/NinePatchRect/VBoxContainer/HBoxContainer6"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_okuri")
theme_override_font_sizes/font_size = 30
text = "1001"

[node name="Label4" type="Label" parent="BottomPanel/BPanel_LeftRect/FrequencyListContainer/NinePatchRect/VBoxContainer/HBoxContainer6"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_okuri")
theme_override_font_sizes/font_size = 30
text = "1001"

[node name="Label5" type="Label" parent="BottomPanel/BPanel_LeftRect/FrequencyListContainer/NinePatchRect/VBoxContainer/HBoxContainer6"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_okuri")
theme_override_font_sizes/font_size = 30
text = "1001"

[node name="FrequencyInfoContainer2" type="MarginContainer" parent="BottomPanel/BPanel_LeftRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3875
anchor_top = 0.0553843
anchor_right = 0.53875
anchor_bottom = 0.956923
offset_right = 6.10352e-05
metadata/_edit_use_anchors_ = true

[node name="NinePatchRect" type="NinePatchRect" parent="BottomPanel/BPanel_LeftRect/FrequencyInfoContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="BottomPanel/BPanel_LeftRect/FrequencyInfoContainer2/NinePatchRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00413223
anchor_right = 1.00413
anchor_bottom = 0.12628
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("6_okuri")
theme_override_font_sizes/font_size = 32
text = "FREQUENCY DATA"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
metadata/_edit_use_anchors_ = true

[node name="GameStatsContainer3" type="MarginContainer" parent="BottomPanel/BPanel_LeftRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.01875
anchor_top = 0.064615
anchor_right = 0.215625
anchor_bottom = 0.966153
offset_right = 6.10352e-05
metadata/_edit_use_anchors_ = true

[node name="NinePatchRect" type="NinePatchRect" parent="BottomPanel/BPanel_LeftRect/GameStatsContainer3"]
layout_mode = 2

[node name="Label" type="Label" parent="BottomPanel/BPanel_LeftRect/GameStatsContainer3/NinePatchRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00531915
anchor_top = 0.0103093
anchor_right = 1.00532
anchor_bottom = 0.137457
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("6_okuri")
theme_override_font_sizes/font_size = 32
text = "GLOBAL RESISTANCE DATA"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
metadata/_edit_use_anchors_ = true

[node name="CameraFeed" type="MarginContainer" parent="."]
layout_mode = 0
offset_top = 175.0
offset_right = 450.0
offset_bottom = 575.0
script = ExtResource("8_r8eje")

[node name="CameraFeedRect" type="TextureRect" parent="CameraFeed"]
layout_mode = 2
texture = ExtResource("5_kyx1g")
